whitespace fix to compensate for hidden authors link in ToC

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,8 +152,13 @@ body {
 }
 
 /* Don't show authors in table of contents */
-a[href='#authors'] {
+#TableOfContents a[href='#authors'] {
    display: none !important;
+}
+
+/* Fix ToC vertical alignment from authors link being hidden */
+#TableOfContents > ul > li:nth-child(2) {
+   padding-top: 0;
 }
 
 #menu-button {
